--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
+    "i": "^0.3.7",
+    "npm": "^11.5.2",
     "vue": "^3.5.18"
   },
   "devDependencies": {
